assets/css/index.css
/* Import googel fonts */
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Rubik+Gemstones&family=Unbounded&display=swap');

/* pre-setting  */
* {
    padding: 0;
    border: none;
    margin: 0;
}

body {
    font-family: Unbounded, cursive;
    background-color: whitesmoke;
    text-align: center;
    color: #202020;
    font-size: 20px;
    font-weight: 400;
}

/* Heading and logo */
h1 {
    font-family: 'Rubik Gemstones', cuesive;
    color: #5a093f;
    font-size: 260%;
    text-transform: uppercase;
}
.logo {
    height:35px;
    width:35px;
    /* margin-right:5px; */

}
/* game menu and function buttons style and display */
button {
    border: 1px solid #0f0f0f;
    background-color: #e5eaf9;
    border-radius: 5px;
    letter-spacing: 1px;
    font-family: Unbounded, cursive;
    font-size: 20px;
    font-weight: 400;
    color: #202020;
    padding: 2px;
    cursor: pointer;

}

button:focus,
button:hover,
button:active{ 
    background-color: #202020;
    color: #e5eaf9;;
}

#green {
    color: rgb(15, 167, 60);
    text-shadow: 1px 1px 1px rgb(65, 190, 16);
    padding:2px 0px 3px 2px;
}

#orange {
    color: rgb(221, 101, 31);
    text-shadow: 1px 1px 1px rgb(65, 190, 16);
    padding:2px 0px 3px 2px;
}

#purple {
    color: rgb(179, 14, 201);
    text-shadow: 1px 1px 1px rgb(65, 190, 16);
    padding:2px 0px 3px 2px;
}

#start {
    background-color: green;
}

#pause {
    background-color: rgb(190, 90, 115);
}

#resume {
    background-color: rgb(84, 84, 179);
}

.game-func i {
    color: gold;
    text-shadow: 1px 1px 1px rgb(65, 190, 16);
    padding:5px auto;      
    
}

.game-menu,.game-func {
    margin-top: 10px;
    display: flex;
    justify-content: space-evenly;
}

/* Game Instruction Modal */

/* Game Guide background */
.guide-container {
    font-family:Lato, sans-serif;
    font-size:small;
    text-align: center;
    letter-spacing: 0.1px;
    background-color: rgba(226, 222, 166, 0.6);
    display: none;
    position: fixed;
    z-index: 1;
    margin-top: 160px;
    left:0;
    top:0;
    width:100%;
    height: 100%;
    overflow: auto;
}
/* Game Instruction page */
.guide-header, 
.guide-footer {
    background-color: rgb(79, 82, 231);
    color: rgb(250, 238, 238);
    padding:6px;
}
.guide-desc {
    margin:5px;
    text-align: justify;
} 
.game-guide {
    background-color: rgb(250, 238, 238);
    font-weight: 800;
    width: 80%;
    margin:auto;
    position: relative;
    margin-top: 20px;
    border:4px ridge rgb(177, 178, 231);
    /* Animates zoom effect on loading the page */
 
    animation-name: game-guide-zoom;
    animation-duration: 3s;
    animation-fill-mode: forwards;
}
/* Zooming effect for game guide page */
@keyframes game-guide-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.05);
    }
}
/* Close button on the game instruction */
.close {
    color: rgb(250, 238, 238);
    float: right;
    font-size: 25px;
    font-weight: bold;
}
.close:hover,
.close.focus {
    color: #202020;
    cursor: pointer;
}

/* difficulty list at the game guide */
h3 i {
    padding-left: 5px;
    color: yellow;
}
ul {
    color:#c50fae;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin-left: 25%;

}
li {
    list-style: circle inside;
}
/* Footer */
footer {
    width: 100%;
    margin-top: 10px;
    height: 35px;
    align-items: center;
    border: 5px groove #e5eaf9;
    position: fixed;
    bottom: 0;
}

footer h2 {
    text-transform: capitalize;
    font-size: 110%;
    text-align: center;
    color: #5a093f;
}

/* Set Style for game area */
.game-area {
    background:url('../img/game-bkgrd.jpeg') no-repeat;
    width: 100%;
    height: 280px;
    position: relative;
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#puzzle {
    background-color: whitesmoke;
    border: 4px solid rgb(13, 15, 13);
    margin:auto;
    text-align: center;   
}

td {
    margin: 5px;
    padding: 5px;
    border: 1px solid;
    width: 35px;
    height: 35px;
    text-align: center;
    font-weight: bold;
    font-size: large;
}

.empty {
    background-color: #0f0f0f;
}

td:hover {
    background-color: #144691;
    cursor: pointer;
}

.empty:hover {
    background-color: #0f0f0f;
    cursor: pointer;
}

